docs: noting that presence list contains a network topology rather than a presence array
